--- a/galleryProject.html
+++ b/galleryProject.html
@@ -13,50 +13,50 @@
             <h1>My Gallery</h1>
             <div class="gallery">
                 <figure class="card">
-                    <img src="./images/image1.jpg" >
+                    <img src="images/image1.jpg" >
                     <figcaption>image-1</figcaption>
                 </figure>
 
 
                 <figure class="card">
-                    <img src="./images/image2.jpeg" >
+                    <img src="images/image2.jpeg" >
                     <figcaption>image-2</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image3.jpeg" >
+                    <img src="images/image3.jpeg" >
                     <figcaption>image-3</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image4.jpeg" >
+                    <img src="images/image4.jpeg" >
                     <figcaption>image-4</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image5.jpeg" >
+                    <img src="images/image5.jpeg" >
                     <figcaption>image-5</figcaption>
                 </figure>
 
 
                 <figure class="card">
-                    <img src="/images/image6.jpeg" >
+                    <img src="images/image6.jpeg" >
                     <figcaption>image-6</figcaption>
                 </figure>
 
 
                 <figure class="card">
-                    <img src="/images/image7.jpeg" >
+                    <img src="images/image7.jpeg" >
                     <figcaption>image-7</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image8.jpeg" >
+                    <img src="images/image8.jpeg" >
                     <figcaption>image-8</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image9.jpeg" >
+                    <img src="images/image9.jpeg" >
                     <figcaption>image-9</figcaption>
                 </figure>
 
