--- a/galleryProject.html
+++ b/galleryProject.html
@@ -29,34 +29,34 @@
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image4.jpeg" >
+                    <img src="./images/image4.jpeg" >
                     <figcaption>image-4</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image5.jpeg" >
+                    <img src="./images/image5.jpeg" >
                     <figcaption>image-5</figcaption>
                 </figure>
 
 
                 <figure class="card">
-                    <img src="/images/image6.jpeg" >
+                    <img src="./images/image6.jpeg" >
                     <figcaption>image-6</figcaption>
                 </figure>
 
 
                 <figure class="card">
-                    <img src="/images/image7.jpeg" >
+                    <img src="./images/image7.jpeg" >
                     <figcaption>image-7</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image8.jpeg" >
+                    <img src="./images/image8.jpeg" >
                     <figcaption>image-8</figcaption>
                 </figure>
 
                 <figure class="card">
-                    <img src="/images/image9.jpeg" >
+                    <img src="./images/image9.jpeg" >
                     <figcaption>image-9</figcaption>
                 </figure>
 
