--- a/galleryProject.html
+++ b/galleryProject.html
@@ -29,7 +29,7 @@
                 </figure>
 
                 <figure class="card">
-                    <img src="images/image4.jpeg" >
+                    <img src="./images/image4.jpeg" >
                     <figcaption>image-4</figcaption>
                 </figure>
 
